[tool.poetry]
name = "csgogamble"
version = "0.1.0"
description = ""
authors = ["Jakob Endler <jakob.endler@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
pandas = "^1.2.4"
http-request-randomizer = "^1.3.2"
trueskill = "^0.4.5"
sqlite-utils = "^3.6"
cfscrape = "^2.1.1"
cloudscraper = "^1.2.58"
lxml = "^4.6.3"
matplotlib = "^3.5.0"
ipykernel = "^6.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
